** RELEASE 0.9.0

29/04/2007
OrbWeaver
- Property editors for Sound, Model, Skin and Texture selection no longer 
  require explicit Apply button.
- Static models use GL Display Lists for improved rendering performance.

16/04/2007
greebo
- Added Stim/Response Editor plugin (The Dark Mod-specific)

12/04/2007
greebo
- Added support for DXT5 RxGB DDS files.

08/04/2007
OrbWeaver
- Added SoundSelector to choose sound shaders via the Entity Inspector

23/03/2007
greebo
- Removed old preference system completely in favour of the XMLRegistry.
- Game Selection at startup is hopefully handled more userfriendly.

15/03/2007
greebo
- Added "Jump to Object" mouse command (Alt-RMB) to jump to 
  the clicked object in the camview.

14/03/2007
greebo
- Removed old TextureClipboard in favour of the new ShaderClipboard. 
  Added Copy/Paste Shader commands to the menu / removed the old ones.

13/03/2007
OrbWeaver
- Added axis rotation to model preview so that models are displayed front-on 
  rather than top-down.
- Per-instance model skinning allows instances of the same model to have a
  different skin.

12/03/2007
greebo
- Added Load/Save Prefab commands and fixed their handling of entity child 
  brushes.

09/03/2007
greebo
- Replaced ArbitraryRotation and ArbitraryScale dialogs with new 
  TransformationDialog.

08/03/2007
greebo
- Rewrote broken "Find & Replace Shader" dialog.

06/03/2007
greebo
- Added "Export CollisionModel" feature to create .cm files from brushes.

04/03/2007
greebo
- Added Select Complete Tall feature.

03/03/2007
OrbWeaver
- Fixed entity class inheritance, entities now list custom properties in the
  Entity Inspector's "Add property" dialog.

03/03/2007
greebo
- Added support for manipulation of func_static-style entities
- Added "Revert To Worldspawn" method to the orthocontext menu.
- Added feature allowing Map Position saving (10 slots)

28/02/2007
greebo
- Holding down SHIFT during manipulations constrains the operation to the axes